# mini-coding-agent

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING_GUIDE.md  api_server.py  examples_all_experts.py  multi_agent_system.py  planner_node.py  pyproject.toml  requirements.txt  start_system.py  test_all_experts.py  test_all_tools.py  test_node_functionality.py
docs/: commit-convention.md
react-frontend/: package-lock.json  package.json  tailwind.config.js
react-frontend/src/: App.tsx  index.css
react-frontend/src/components/: AIMessageCard.tsx  BaseMessageCard.tsx  ChatInterface.tsx  CodeBlock.tsx  DebugVisualization.tsx  DiffViewer.tsx  FileOperationCard.tsx  MarkdownRenderer.tsx  TerminalCard.tsx  ToolCallCard.tsx  expertDetails.ts
react-frontend/src/lib/: utils.ts
test_sandbox/: README.md  config.yaml  requirements.txt
test_sandbox/docs/: api.md  setup.md
test_sandbox/scripts/: deploy.sh
test_sandbox/src/: __init__.py  main.py  models.py  utils.py
test_sandbox/tests/: __init__.py  test_main.py  test_utils.py
