[tool.poetry]
name = "mini-coding-agent"
version = "0.1.0"
description = "A mini coding agent system for educational purposes, built with LangGraph."
authors = ["The Mini Coding Agent Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "*"
langchain-openai = "*"
python-dotenv = "*"
httpx = "*"
pydantic = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
langchain-google-genai = "^2.1.5"
langchain-anthropic = "^0.3.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"